GitVersion1/objects/User_Budget_and_Actual__c.object
<CustomObject>
    <description>Budget and Actual data from scorecard - for dashboard and monitoring of budget realization (Poland custom object)</description>
    <fields>
        <fullName>sc_Approval_Manager_Id__c</fullName>
        <formula>sc_User_Id__r.Manager.Id_18_long__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Manager Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Approval_Manager_Name__c</fullName>
        <formula>sc_User_Id__r.Manager.FirstName + &apos; &apos; + sc_User_Id__r.Manager.LastName</formula>
        <label>Approval Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_BU_Type__c</fullName>
        <label>BU Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Budget_Date__c</fullName>
        <label>Budget Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sc_CDH_Territory_Code_Id__c</fullName>
        <formula>sc_CDH_Territory_Name__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CDH Territory Code Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_CDH_Territory_Code__c</fullName>
        <formula>sc_CDH_Territory_Name__r.CDH_External_Territory_ID__c</formula>
        <label>CDH Territory Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_CDH_Territory_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>= CDH Territory</description>
        <label>CDH Territory Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CDH_Territory__c.CDH_Primary__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CDH_Territory__c</referenceTo>
        <relationshipLabel>User Budgets and Actuals</relationshipLabel>
        <relationshipName>User_Budgets_and_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sc_Channel_Type__c</fullName>
        <label>Channel Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_GM_Budget_Actual_CY__c</fullName>
        <formula>sc_Gross_Margin_Budget_CY__c-sc_Gross_Margin_Actual_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM Budget - Actual CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sc_GM_Budget_Actual_CY_flag__c</fullName>
        <formula>IMAGE( IF( sc_GM_Budget_Actual_CY__c &gt;0, &quot;/img/samples/light_red.gif&quot;, &quot;/img/samples/light_green.gif&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GM Budget - Actual CY flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Gross_Margin_Actual_CY__c</fullName>
        <label>Gross Margin Actual CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sc_Gross_Margin_Budget_CY__c</fullName>
        <label>Gross Margin Budget CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sc_Gross_Margin_Previous_CY__c</fullName>
        <label>Gross Margin Previous CY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sc_Last_Admin_Update__c</fullName>
        <label>Last Admin Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sc_Manager_Profile_Name_Id__c</fullName>
        <formula>sc_User_Id__r.Manager.Profile_Name__c</formula>
        <label>Manager Profile Name Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Manager_Profile_Name__c</fullName>
        <formula>Owner:User.Manager.Role_Name__c</formula>
        <label>Manager Profile Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_New_Principal__c</fullName>
        <label>New_Principal</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Product_group_budget__c</fullName>
        <label>Product Group</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Specie_Advisor__c</fullName>
        <label>Specie_Advisor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Specie__c</fullName>
        <label>Specie</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Specie_x__c</fullName>
        <label>Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Statutory__c</fullName>
        <label>Statutory</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <lookupFilter>
            <active>true</active>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Budgets_and_Actuals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sc_User_Name__c</fullName>
        <formula>sc_User_Id__r.FirstName + &apos; &apos; + sc_User_Id__r.LastName</formula>
        <label>User Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Vol_Budget_Actual_CY__c</fullName>
        <formula>sc_Volume_Budget_CY__c-sc_Volume_Actual_CY__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vol Budget - Actual CY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Vol_Budget_Actual_CY_flag__c</fullName>
        <formula>IMAGE( IF( sc_Vol_Budget_Actual_CY__c &gt;0, &quot;/img/samples/light_red.gif&quot;, &quot;/img/samples/light_green.gif&quot;) , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vol Budget - Actual CY flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sc_Volume_Actual_CY__c</fullName>
        <label>Volume Actual CY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Volume_Budget_CY__c</fullName>
        <label>Volume Budget CY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Volume_Previous_CY__c</fullName>
        <label>Volume Previous CY</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sc_Year_and_Month__c</fullName>
        <formula>DATE(YEAR(sc_Budget_Date__c),MONTH(sc_Budget_Date__c),1)</formula>
        <label>Year and Month</label>
        <type>Date</type>
    </fields>
    <label>User Budget and Actual</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>sc_BU_Type__c</columns>
        <columns>sc_CDH_Territory_Code__c</columns>
        <columns>sc_Year_and_Month__c</columns>
        <columns>sc_Volume_Budget_CY__c</columns>
        <columns>sc_Gross_Margin_Budget_CY__c</columns>
        <columns>sc_Specie_x__c</columns>
        <columns>sc_Specie__c</columns>
        <columns>sc_Product_group_budget__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sc_Manager_Profile_Name__c</columns>
        <columns>sc_Last_Admin_Update__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2015</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>sc_BU_Type__c</columns>
        <columns>sc_CDH_Territory_Code__c</columns>
        <columns>sc_Year_and_Month__c</columns>
        <columns>sc_Volume_Budget_CY__c</columns>
        <columns>sc_Gross_Margin_Budget_CY__c</columns>
        <columns>sc_Specie_x__c</columns>
        <columns>sc_Specie__c</columns>
        <columns>sc_Product_group_budget__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sc_Manager_Profile_Name__c</columns>
        <columns>sc_Last_Admin_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sc_Budget_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2015</value>
        </filters>
        <filters>
            <field>sc_Budget_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>5/31/2016</value>
        </filters>
        <label>All 2015</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2016</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>sc_BU_Type__c</columns>
        <columns>sc_CDH_Territory_Code__c</columns>
        <columns>sc_Year_and_Month__c</columns>
        <columns>sc_Volume_Budget_CY__c</columns>
        <columns>sc_Gross_Margin_Budget_CY__c</columns>
        <columns>sc_Specie_x__c</columns>
        <columns>sc_Specie__c</columns>
        <columns>sc_Product_group_budget__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sc_Manager_Profile_Name__c</columns>
        <columns>sc_Last_Admin_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sc_Budget_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>6/1/2016</value>
        </filters>
        <filters>
            <field>sc_Budget_Date__c</field>
            <operation>lessOrEqual</operation>
            <value>5/31/2017</value>
        </filters>
        <label>All 2016</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_specific</fullName>
        <columns>NAME</columns>
        <columns>sc_BU_Type__c</columns>
        <columns>sc_CDH_Territory_Code__c</columns>
        <columns>sc_Year_and_Month__c</columns>
        <columns>sc_Volume_Budget_CY__c</columns>
        <columns>sc_Gross_Margin_Budget_CY__c</columns>
        <columns>sc_Specie_x__c</columns>
        <columns>sc_Specie__c</columns>
        <columns>sc_Product_group_budget__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>sc_Manager_Profile_Name__c</columns>
        <columns>sc_Last_Admin_Update__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>sc_Last_Admin_Update__c</field>
            <operation>equals</operation>
            <value>9/30/2016 12:00 AM</value>
        </filters>
        <label>All specific</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SC-{YYYY}.{MM}.{DD}-{000000}</displayFormat>
        <label>User Budget Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Budgets and Actuals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>